# push_swap

./: .gitignore  CMakeLists.txt  Makefile  README.md  push_swap_pro  push_swap_u  randomizer  test_3_2_1_0.op  test_5_take_put.op  test_pdf_example.op
checker_src/: ch_parser.c  ch_solves.c  ch_vis_dispatcher.c  ch_vis_get_op_num.c  ch_vis_helpers.c  ch_vis_print_stack.c  ch_visualize.c  main.c
includes/: checker.h  push_swap.h
libft/: Makefile  author
libft/includes/: ft_printf.h  libft.h
libft/libc/: ft_arr_free.c  ft_arrlen.c  ft_arrnew.c  ft_atoi.c  ft_atoi_base.c  ft_atoi_max.c  ft_bzero.c  ft_clear.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islowercase.c  ft_isprint.c  ft_isspace.c  ft_isstralpha.c  ft_isstrdigit.c  ft_isstrlowercase.c  ft_isstruppercase.c  ft_isuppercase.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  (+47 more)
push_swap_src/: main.c  ps_algorithm.c  ps_quicksort_algorithm.c  ps_simple_algorithm.c  ps_sort_first_stage.c  ps_sort_helpers.c  ps_sort_last_3_numbers.c  ps_sort_make_operation.c  ps_sort_second_stage.c
shared_src/: ps_free.c  ps_list_push_pop.c  ps_list_revers.c  ps_parser.c  ps_stack_is_sorted.c
src/: ps_exit.c  ps_free.c  ps_get_operation.c  ps_init.c  ps_list_push_pop.c  ps_list_revers.c  ps_make_operation.c  ps_op_pa_pb.c  ps_op_ra_rb_rr.c  ps_op_rra_rrb_rrr.c  ps_op_sa_sb_ss.c  ps_parser.c  ps_print_operation.c  ps_stack_is_sorted.c  ps_stack_push_pop.c  ps_stack_revers.c  ps_trash.c
(+20 files in other folders)
